# KutsRPC-IPC

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: activity.rs  consts.rs  errors.rs  events.rs  ipc.rs  lib.rs  payload.rs
